DTOs actualizados