@@ -1,6 +1,7 @@
 package Hewwwe.controller;
 
-import Hewwwe.dto.CartDTO;
+import Hewwwe.dto.CartCreateDTO;
+import Hewwwe.dto.CartResponseDTO;
 import Hewwwe.entity.Cart;
 import Hewwwe.entity.Product;
 import Hewwwe.exception.ResourceNotFoundException;
@@ -32,10 +33,10 @@ public class CartController {
     @GetMapping
     @Operation(summary = "Get all carts")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved carts")
-    public ResponseEntity<List<CartDTO>> getAllCarts() {
-        List<CartDTO> carts = cartService.getAllCarts().stream()
-                .map(cart -> modelMapper.map(cart, CartDTO.class))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<CartResponseDTO>> getAllCarts() {
+        List<CartResponseDTO> carts = cartService.getAllCarts().stream()
+                .map(cart -> modelMapper.map(cart, CartResponseDTO.class))
+                .toList();
         return ResponseEntity.ok(carts);
     }
 
@@ -43,20 +44,20 @@ public class CartController {
     @Operation(summary = "Get a cart by ID")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved cart")
     @ApiResponse(responseCode = "404", description = "Cart not found")
-    public ResponseEntity<CartDTO> getCartById(@PathVariable Long id) {
+    public ResponseEntity<CartResponseDTO> getCartById(@PathVariable Long id) {
         Cart cart = cartService.getCartById(id);
-        return ResponseEntity.ok(modelMapper.map(cart, CartDTO.class));
+        return ResponseEntity.ok(modelMapper.map(cart, CartResponseDTO.class));
     }
 
     @PostMapping
     @Operation(summary = "Create a new cart")
     @ApiResponse(responseCode = "201", description = "Cart created successfully")
     @ApiResponse(responseCode = "400", description = "Invalid input")
-    public ResponseEntity<CartDTO> createCart(@Valid @RequestBody CartDTO cartDTO) {
+    public ResponseEntity<CartResponseDTO> createCart(@Valid @RequestBody CartCreateDTO cartDTO) {
         try {
             Cart cart = modelMapper.map(cartDTO, Cart.class);
             Cart savedCart = cartService.saveCart(cart);
-            return new ResponseEntity<>(modelMapper.map(savedCart, CartDTO.class), HttpStatus.CREATED);
+            return new ResponseEntity<>(modelMapper.map(savedCart, CartResponseDTO.class), HttpStatus.CREATED);
         } catch (Exception e) {
             throw new RuntimeException("Error creating cart: " + e.getMessage());
         }
@@ -66,14 +67,14 @@ public class CartController {
     @Operation(summary = "Update an existing cart")
     @ApiResponse(responseCode = "200", description = "Cart updated successfully")
     @ApiResponse(responseCode = "404", description = "Cart not found")
-    public ResponseEntity<CartDTO> updateCart(
+    public ResponseEntity<CartResponseDTO> updateCart(
             @PathVariable Long id,
-            @Valid @RequestBody CartDTO cartDTO) {
+            @Valid @RequestBody CartResponseDTO cartDTO) {
         try {
             Cart cart = modelMapper.map(cartDTO, Cart.class);
             cart.setCartId(id);
             Cart updatedCart = cartService.updateCart(cart);
-            return ResponseEntity.ok(modelMapper.map(updatedCart, CartDTO.class));
+            return ResponseEntity.ok(modelMapper.map(updatedCart, CartResponseDTO.class));
         } catch (Exception e) {
             throw new RuntimeException("Error updating cart: " + e.getMessage());
         }
@@ -91,18 +92,18 @@ public class CartController {
     @PostMapping("/{cartId}/products/{productId}")
     @Operation(summary = "Add product to cart")
     @ApiResponse(responseCode = "200", description = "Product added to cart successfully")
-    public ResponseEntity<CartDTO> addProductToCart(@PathVariable Long cartId, @PathVariable Long productId) {
+    public ResponseEntity<CartResponseDTO> addProductToCart(@PathVariable Long cartId, @PathVariable Long productId) {
         Product product = productService.findById(productId)
                 .orElseThrow(() -> new ResourceNotFoundException("Product not found with id: " + productId));
         Cart updatedCart = cartService.addProductToCart(cartId, product);
-        return ResponseEntity.ok(modelMapper.map(updatedCart, CartDTO.class));
+        return ResponseEntity.ok(modelMapper.map(updatedCart, CartResponseDTO.class));
     }
 
     @DeleteMapping("/{cartId}/products/{productId}")
     @Operation(summary = "Remove product from cart")
     @ApiResponse(responseCode = "200", description = "Product removed from cart successfully")
-    public ResponseEntity<CartDTO> removeProductFromCart(@PathVariable Long cartId, @PathVariable Long productId) {
+    public ResponseEntity<CartResponseDTO> removeProductFromCart(@PathVariable Long cartId, @PathVariable Long productId) {
         Cart updatedCart = cartService.removeProductFromCart(cartId, productId);
-        return ResponseEntity.ok(modelMapper.map(updatedCart, CartDTO.class));
+        return ResponseEntity.ok(modelMapper.map(updatedCart, CartResponseDTO.class));
     }
 }
