@@ -1,7 +1,9 @@
 package Hewwwe.controller;
 
-import Hewwwe.dto.CategoryDTO;
-import Hewwwe.dto.ProductDTO;
+import Hewwwe.dto.CategoryCreateDTO;
+import Hewwwe.dto.CategoryResponseDTO;
+import Hewwwe.dto.ProductCreateDTO;
+import Hewwwe.dto.ProductResponseDTO;
 import Hewwwe.entity.Category;
 import Hewwwe.entity.Product;
 import Hewwwe.services.CategoryService;
@@ -16,7 +18,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/categories")
@@ -30,10 +31,10 @@ public class CategoryController {
     @GetMapping
     @Operation(summary = "Get all categories")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved categories")
-    public ResponseEntity<List<CategoryDTO>> getAllCategories() {
-        List<CategoryDTO> categories = categoryService.getAllCategories().stream()
-                .map(category -> modelMapper.map(category, CategoryDTO.class))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<CategoryResponseDTO>> getAllCategories() {
+        List<CategoryResponseDTO> categories = categoryService.getAllCategories().stream()
+                .map(category -> modelMapper.map(category, CategoryResponseDTO.class))
+                .toList();
         return ResponseEntity.ok(categories);
     }
 
@@ -41,20 +42,20 @@ public class CategoryController {
     @Operation(summary = "Get a category by ID")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved category")
     @ApiResponse(responseCode = "404", description = "Category not found")
-    public ResponseEntity<CategoryDTO> getCategoryById(@PathVariable Long id) {
+    public ResponseEntity<CategoryResponseDTO> getCategoryById(@PathVariable Long id) {
         Category category = categoryService.getCategoryById(id);
-        return ResponseEntity.ok(modelMapper.map(category, CategoryDTO.class));
+        return ResponseEntity.ok(modelMapper.map(category, CategoryResponseDTO.class));
     }
 
     @PostMapping
     @Operation(summary = "Create a new category")
     @ApiResponse(responseCode = "201", description = "Category created successfully")
     @ApiResponse(responseCode = "400", description = "Invalid input")
-    public ResponseEntity<CategoryDTO> createCategory(@Valid @RequestBody CategoryDTO categoryDTO) {
+    public ResponseEntity<CategoryResponseDTO> createCategory(@Valid @RequestBody CategoryCreateDTO categoryDTO) {
         try {
             Category category = modelMapper.map(categoryDTO, Category.class);
             Category savedCategory = categoryService.createCategory(category);
-            return new ResponseEntity<>(modelMapper.map(savedCategory, CategoryDTO.class), HttpStatus.CREATED);
+            return new ResponseEntity<>(modelMapper.map(savedCategory, CategoryResponseDTO.class), HttpStatus.CREATED);
         } catch (Exception e) {
             throw new RuntimeException("Error creating category: " + e.getMessage());
         }
@@ -64,13 +65,13 @@ public class CategoryController {
     @Operation(summary = "Update an existing category")
     @ApiResponse(responseCode = "200", description = "Category updated successfully")
     @ApiResponse(responseCode = "404", description = "Category not found")
-    public ResponseEntity<CategoryDTO> updateCategory(
+    public ResponseEntity<CategoryResponseDTO> updateCategory(
             @PathVariable Long id,
-            @Valid @RequestBody CategoryDTO categoryDTO) {
+            @Valid @RequestBody CategoryResponseDTO categoryDTO) {
         try {
             Category category = modelMapper.map(categoryDTO, Category.class);
             Category updatedCategory = categoryService.updateCategory(id, category);
-            return ResponseEntity.ok(modelMapper.map(updatedCategory, CategoryDTO.class));
+            return ResponseEntity.ok(modelMapper.map(updatedCategory, CategoryResponseDTO.class));
         } catch (Exception e) {
             throw new RuntimeException("Error updating category: " + e.getMessage());
         }
@@ -89,21 +90,21 @@ public class CategoryController {
     @Operation(summary = "Get all products in a category")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved category products")
     @ApiResponse(responseCode = "404", description = "Category not found")
-    public ResponseEntity<List<ProductDTO>> getProductsByCategory(@PathVariable Long id) {
+    public ResponseEntity<List<ProductResponseDTO>> getProductsByCategory(@PathVariable Long id) {
         List<Product> products = categoryService.getProductsByCategory(id);
         return ResponseEntity.ok(products.stream()
-                .map(product -> modelMapper.map(product, ProductDTO.class))
-                .collect(Collectors.toList()));
+                .map(product -> modelMapper.map(product, ProductResponseDTO.class))
+                .toList());
     }
 
     @PostMapping("/{id}/products")
     @Operation(summary = "Add product to category")
     @ApiResponse(responseCode = "200", description = "Product added to category successfully")
-    public ResponseEntity<ProductDTO> addProductToCategory(
+    public ResponseEntity<ProductResponseDTO> addProductToCategory(
             @PathVariable Long id,
-            @Valid @RequestBody ProductDTO productDTO) {
+            @Valid @RequestBody ProductCreateDTO productDTO) {
         Product product = modelMapper.map(productDTO, Product.class);
         Product savedProduct = categoryService.addProductToCategory(id, product);
-        return ResponseEntity.ok(modelMapper.map(savedProduct, ProductDTO.class));
+        return ResponseEntity.ok(modelMapper.map(savedProduct, ProductResponseDTO.class));
     }
 }
