@@ -1,7 +1,8 @@
 package Hewwwe.controller;
 
-import Hewwwe.dto.ExchangeDTO;
-import Hewwwe.dto.ProductDTO;
+import Hewwwe.dto.ExchangeCreateDTO;
+import Hewwwe.dto.ExchangeResponseDTO;
+import Hewwwe.dto.ProductResponseDTO;
 import Hewwwe.entity.Exchange;
 import Hewwwe.exception.ResourceNotFoundException;
 import Hewwwe.services.ExchangeService;
@@ -16,7 +17,6 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/exchanges")
@@ -30,10 +30,10 @@ public class ExchangeController {
     @GetMapping
     @Operation(summary = "Get all exchanges")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved exchanges")
-    public ResponseEntity<List<ExchangeDTO>> getAllExchanges() {
-        List<ExchangeDTO> exchanges = exchangeService.getAllExchanges().stream()
-                .map(exchange -> modelMapper.map(exchange, ExchangeDTO.class))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ExchangeResponseDTO>> getAllExchanges() {
+        List<ExchangeResponseDTO> exchanges = exchangeService.getAllExchanges().stream()
+                .map(exchange -> modelMapper.map(exchange, ExchangeResponseDTO.class))
+                .toList();
         return ResponseEntity.ok(exchanges);
     }
 
@@ -41,20 +41,20 @@ public class ExchangeController {
     @Operation(summary = "Get an exchange by ID")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved exchange")
     @ApiResponse(responseCode = "404", description = "Exchange not found")
-    public ResponseEntity<ExchangeDTO> getExchangeById(@PathVariable Long id) {
+    public ResponseEntity<ExchangeResponseDTO> getExchangeById(@PathVariable Long id) {
         Exchange exchange = exchangeService.getExchangeById(id);
-        return ResponseEntity.ok(modelMapper.map(exchange, ExchangeDTO.class));
+        return ResponseEntity.ok(modelMapper.map(exchange, ExchangeResponseDTO.class));
     }
 
     @PostMapping
     @Operation(summary = "Create a new exchange")
     @ApiResponse(responseCode = "201", description = "Exchange created successfully")
     @ApiResponse(responseCode = "400", description = "Invalid input")
-    public ResponseEntity<ExchangeDTO> createExchange(@Valid @RequestBody ExchangeDTO exchangeDTO) {
+    public ResponseEntity<ExchangeResponseDTO> createExchange(@Valid @RequestBody ExchangeCreateDTO exchangeDTO) {
         try {
             Exchange exchange = modelMapper.map(exchangeDTO, Exchange.class);
             Exchange savedExchange = exchangeService.createExchange(exchange);
-            return new ResponseEntity<>(modelMapper.map(savedExchange, ExchangeDTO.class), HttpStatus.CREATED);
+            return new ResponseEntity<>(modelMapper.map(savedExchange, ExchangeResponseDTO.class), HttpStatus.CREATED);
         } catch (Exception e) {
             throw new RuntimeException("Error creating exchange: " + e.getMessage());
         }
@@ -64,13 +64,13 @@ public class ExchangeController {
     @Operation(summary = "Update an existing exchange")
     @ApiResponse(responseCode = "200", description = "Exchange updated successfully")
     @ApiResponse(responseCode = "404", description = "Exchange not found")
-    public ResponseEntity<ExchangeDTO> updateExchange(
+    public ResponseEntity<ExchangeResponseDTO> updateExchange(
             @PathVariable Long id,
-            @Valid @RequestBody ExchangeDTO exchangeDTO) {
+            @Valid @RequestBody ExchangeResponseDTO exchangeDTO) {
         try {
             Exchange exchange = modelMapper.map(exchangeDTO, Exchange.class);
             Exchange updatedExchange = exchangeService.updateExchange(exchange);
-            return ResponseEntity.ok(modelMapper.map(updatedExchange, ExchangeDTO.class));
+            return ResponseEntity.ok(modelMapper.map(updatedExchange, ExchangeResponseDTO.class));
         } catch (Exception e) {
             throw new RuntimeException("Error updating exchange: " + e.getMessage());
         }
@@ -88,20 +88,20 @@ public class ExchangeController {
     @GetMapping("/user/{userId}/requested")
     @Operation(summary = "Get exchanges requested by a user")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved user's requested exchanges")
-    public ResponseEntity<List<ExchangeDTO>> getExchangesByRequesterId(@PathVariable Long userId) {
-        List<ExchangeDTO> exchanges = exchangeService.getExchangesByRequesterId(userId).stream()
-                .map(exchange -> modelMapper.map(exchange, ExchangeDTO.class))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ExchangeResponseDTO>> getExchangesByRequesterId(@PathVariable Long userId) {
+        List<ExchangeResponseDTO> exchanges = exchangeService.getExchangesByRequesterId(userId).stream()
+                .map(exchange -> modelMapper.map(exchange, ExchangeResponseDTO.class))
+                .toList();
         return ResponseEntity.ok(exchanges);
     }
 
     @GetMapping("/user/{userId}/owned")
     @Operation(summary = "Get exchanges where user is the owner")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved user's owned exchanges")
-    public ResponseEntity<List<ExchangeDTO>> getExchangesByOwnerId(@PathVariable Long userId) {
-        List<ExchangeDTO> exchanges = exchangeService.getExchangesByOwnerId(userId).stream()
-                .map(exchange -> modelMapper.map(exchange, ExchangeDTO.class))
-                .collect(Collectors.toList());
+    public ResponseEntity<List<ExchangeResponseDTO>> getExchangesByOwnerId(@PathVariable Long userId) {
+        List<ExchangeResponseDTO> exchanges = exchangeService.getExchangesByOwnerId(userId).stream()
+                .map(exchange -> modelMapper.map(exchange, ExchangeResponseDTO.class))
+                .toList();
         return ResponseEntity.ok(exchanges);
     }
 
@@ -109,15 +109,15 @@ public class ExchangeController {
     @Operation(summary = "Get all products in an exchange")
     @ApiResponse(responseCode = "200", description = "Successfully retrieved exchange products")
     @ApiResponse(responseCode = "404", description = "Exchange not found")
-    public ResponseEntity<List<ProductDTO>> getProductsByExchange(@PathVariable Long id) {
+    public ResponseEntity<List<ProductResponseDTO>> getProductsByExchange(@PathVariable Long id) {
         Exchange exchange = exchangeService.getExchangeById(id);
         if (exchange == null) {
             throw new ResourceNotFoundException("Exchange not found with id: " + id);
         }
         
-        List<ProductDTO> products = exchange.getProducts().stream()
-                .map(product -> modelMapper.map(product, ProductDTO.class))
-                .collect(Collectors.toList());
+        List<ProductResponseDTO> products = exchange.getProducts().stream()
+                .map(product -> modelMapper.map(product, ProductResponseDTO.class))
+                .toList();
         
         return ResponseEntity.ok(products);
     }
@@ -126,10 +126,10 @@ public class ExchangeController {
     @Operation(summary = "Update exchange status")
     @ApiResponse(responseCode = "200", description = "Exchange status updated successfully")
     @ApiResponse(responseCode = "404", description = "Exchange not found")
-    public ResponseEntity<ExchangeDTO> updateExchangeStatus(
+    public ResponseEntity<ExchangeResponseDTO> updateExchangeStatus(
             @PathVariable Long id,
             @RequestParam String status) {
         Exchange updatedExchange = exchangeService.updateExchangeStatus(id, status);
-        return ResponseEntity.ok(modelMapper.map(updatedExchange, ExchangeDTO.class));
+        return ResponseEntity.ok(modelMapper.map(updatedExchange, ExchangeResponseDTO.class));
     }
 }
